<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio2">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo2_txt"
            android:gravity="center_horizontal|center_vertical"
            android:textStyle="normal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/nombrecli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/nombre_txt"/>
        <EditText
            android:id="@+id/numerocli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="phone"
            android:hint="@string/telefono_txt"/>
        <EditText
            android:id="@+id/productocli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/productos_txt"/>
        <EditText
            android:id="@+id/ciudadcli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/ciudad_txt"/>
        <EditText
            android:id="@+id/direccioncli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/direccion_txt"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_txt"
            android:onClick="sendExplicit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>